--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3415,3 +3415,17 @@ input, select, textarea {
 	from {opacity: .4}
 	to {opacity: 1}
 }
+
+/* Define the style for the columns */
+.column {
+    float: left;
+    width: 45%; /* Adjust the width as needed */
+    margin-left: 5%; /* Adjust the margin as needed */
+}
+
+/* Clear floats after the columns */
+.row:after {
+    content: "";
+    display: table;
+    clear: both;
+}
