--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2572,7 +2572,7 @@ input, select, textarea {
 		-webkit-flex-wrap: wrap;
 		-ms-flex-wrap: wrap;
 		flex-wrap: wrap;
-		postiion: relative;
+		position: relative;
 		margin: -2.5em 0 0 -2.5em;
 	}
 
@@ -3163,172 +3163,154 @@ input, select, textarea {
 		}
 
 /* Footer */
+#footer {
+    padding: 5em 0 6em 20px; /* Adjusted padding to add space on the left */
+    background-color: #f6f6f6;
+}
 
-	#footer {
-		padding: 5em 0 6em 0 ;
-		background-color: #f6f6f6;
-	}
+#footer > .inner {
+    display: -moz-flex;
+    display: -webkit-flex;
+    display: -ms-flex;
+    display: flex;
+    -moz-flex-wrap: wrap;
+    -webkit-flex-wrap: wrap;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+    -moz-flex-direction: row;
+    -webkit-flex-direction: row;
+    -ms-flex-direction: row;
+    flex-direction: row;
+}
 
-		#footer > .inner {
-			display: -moz-flex;
-			display: -webkit-flex;
-			display: -ms-flex;
-			display: flex;
-			-moz-flex-wrap: wrap;
-			-webkit-flex-wrap: wrap;
-			-ms-flex-wrap: wrap;
-			flex-wrap: wrap;
-			-moz-flex-direction: row;
-			-webkit-flex-direction: row;
-			-ms-flex-direction: row;
-			flex-direction: row;
-		}
+#footer > .inner > * > :last-child {
+    margin-bottom: 0;
+}
 
-			#footer > .inner > * > :last-child {
-				margin-bottom: 0;
-			}
+#footer > .inner section:nth-child(1) {
+    width: calc(66% - 22px); /* Adjusted width to create space */
+    margin-right: 2.5em;
+}
 
-			#footer > .inner section:nth-child(1) {
-				width: calc(66% - 2.5em);
-				margin-right: 2.5em;
-			}
+#footer > .inner section:nth-child(2) {
+    width: calc(33% - 2.5em);
+}
 
-			#footer > .inner section:nth-child(2) {
-				width: calc(33% - 2.5em);
-				margin-left: 2.5em;
-			}
+#footer > .inner .copyright {
+    width: 100%;
+    padding: 0;
+    margin-top: 5em;
+    list-style: none;
+    font-size: 0.8em;
+    color: rgba(88, 88, 88, 0.5);
+}
 
-			#footer > .inner .copyright {
-				width: 100%;
-				padding: 0;
-				margin-top: 5em;
-				list-style: none;
-				font-size: 0.8em;
-				color: rgba(88, 88, 88, 0.5);
-			}
+#footer > .inner .copyright a {
+    color: inherit;
+}
 
-				#footer > .inner .copyright a {
-					color: inherit;
-				}
+#footer > .inner .copyright li {
+    display: inline-block;
+    border-left: solid 1px rgba(88, 88, 88, 0.15);
+    line-height: 1;
+    padding: 0 0 0 1em;
+    margin: 0 0 0 1em;
+}
 
-				#footer > .inner .copyright li {
-					display: inline-block;
-					border-left: solid 1px rgba(88, 88, 88, 0.15);
-					line-height: 1;
-					padding: 0 0 0 1em;
-					margin: 0 0 0 1em;
-				}
+#footer > .inner .copyright li:first-child {
+    border-left: 0;
+    padding-left: 0;
+    margin-left: 0;
+}
 
-					#footer > .inner .copyright li:first-child {
-						border-left: 0;
-						padding-left: 0;
-						margin-left: 0;
-					}
+@media screen and (max-width: 1280px) {
+    #footer {
+        padding: 5em 0 3em 20px;
+    }
 
-		@media screen and (max-width: 1280px) {
+    #footer > .inner section:nth-child(1) {
+        width: calc(66% - 21px);
+        margin-right: 1.25em;
+    }
 
-			#footer {
-				padding: 5em 0 3em 0 ;
-			}
+    #footer > .inner section:nth-child(2) {
+        width: calc(33% - 1.25em);
+    }
+}
 
-				#footer > .inner section:nth-child(1) {
-					width: calc(66% - 1.25em);
-					margin-right: 1.25em;
-				}
+@media screen and (max-width: 980px) {
+    #footer > .inner section:nth-child(1) {
+        width: 66%;
+        margin-right: 0;
+    }
 
-				#footer > .inner section:nth-child(2) {
-					width: calc(33% - 1.25em);
-					margin-left: 1.25em;
-				}
+    #footer > .inner section:nth-child(2) {
+        width: calc(33% - 22px);
+    }
+}
 
-		}
+@media screen and (max-width: 736px) {
+    #footer {
+        padding: 3em 0 1em 20px;
+    }
 
-		@media screen and (max-width: 980px) {
+    #footer > .inner {
+        -moz-flex-direction: column;
+        -webkit-flex-direction: column;
+        -ms-flex-direction: column;
+        flex-direction: column;
+    }
 
-			#footer > .inner section:nth-child(1) {
-				width: 66%;
-				margin-right: 0;
-			}
+    #footer > .inner section:nth-child(1) {
+        width: 100%;
+        margin-right: 0;
+        margin: 3em 0 0 0;
+    }
 
-			#footer > .inner section:nth-child(2) {
-				width: calc(33% - 2.5em);
-				margin-left: 2.5em;
-			}
+    #footer > .inner section:nth-child(2) {
+        -moz-order: -1;
+        -webkit-order: -1;
+        -ms-order: -1;
+        order: -1;
+        width: 100%;
+    }
 
-		}
+    #footer > .inner .copyright {
+        margin-top: 3em;
+    }
+}
 
-		@media screen and (max-width: 736px) {
+@media screen and (max-width: 480px) {
+    #footer > .inner .copyright {
+        margin-top: 3em;
+    }
 
-			#footer {
-				padding: 3em 0 1em 0 ;
-			}
+    #footer > .inner .copyright li {
+        border-left: 0;
+        padding-left: 0;
+        margin: 0.75em 0 0 0;
+        display: block;
+        line-height: inherit;
+    }
 
-				#footer > .inner {
-					-moz-flex-direction: column;
-					-webkit-flex-direction: column;
-					-ms-flex-direction: column;
-					flex-direction: column;
-				}
-
-					#footer > .inner section:nth-child(1) {
-						width: 100%;
-						margin-right: 0;
-						margin: 3em 0 0 0;
-					}
-
-					#footer > .inner section:nth-child(2) {
-						-moz-order: -1;
-						-webkit-order: -1;
-						-ms-order: -1;
-						order: -1;
-						width: 100%;
-						margin-left: 0;
-					}
-
-					#footer > .inner .copyright {
-						margin-top: 3em;
-					}
-
-		}
-
-		@media screen and (max-width: 480px) {
-
-			#footer > .inner .copyright {
-				margin-top: 3em;
-			}
-
-				#footer > .inner .copyright li {
-					border-left: 0;
-					padding-left: 0;
-					margin: 0.75em 0 0 0;
-					display: block;
-					line-height: inherit;
-				}
-
-					#footer > .inner .copyright li:first-child {
-						margin-top: 0;
-					}
-
-		}
+    #footer > .inner .copyright li:first-child {
+        margin-top: 0;
+    }
+}
 
 /* Wrapper */
+#wrapper > * > .inner {
+    width: 100%;
+    max-width: 68em;
+    margin: 0 auto;
+    padding: 0 2.5em;
+}
 
-	#wrapper > * > .inner {
-		width: 100%;
-		max-width: 68em;
-		margin: 0 auto;
-		padding: 0 2.5em;
-	}
-
-		@media screen and (max-width: 736px) {
-
-			#wrapper > * > .inner {
-				padding: 0 1.25em;
-			}
-
-		}
-
-* {box-sizing:border-box}
+@media screen and (max-width: 736px) {
+    #wrapper > * > .inner {
+        padding: 0 1.25em;
+    }
+}
 
 /* Slideshow container */
 .slideshow-container {
@@ -3416,16 +3398,15 @@ input, select, textarea {
 	to {opacity: 1}
 }
 
-/* Define the style for the columns */
-.column {
-    float: left;
-    width: 45%; /* Adjust the width as needed */
-    margin-left: 5%; /* Adjust the margin as needed */
-}
+<style>
+    .column {
+        width: calc(100% / 2); /* Divide the width equally among the columns */
+        float: left; /* Float the columns to align them */
+        box-sizing: border-box; /* Include padding and border in the width */
+    }
 
-/* Clear floats after the columns */
-.row:after {
-    content: "";
-    display: table;
-    clear: both;
-}
+    .row {
+        clear: both; /* Clear floats to prevent them from affecting elements outside */
+    }
+</style>
+
